# mdf

./: .gitignore  CHANGES.md  COOL_STUFF.md  README.md
client/: .env.example  Dockerfile  README.md  package-lock.json  package.json
client/src/: app.html
client/src/lib/: db.ts  types.ts
client/src/routes/: +page.svelte
client/src/routes/reader/[id]/: +page.svelte
server/: Cargo.toml  Dockerfile  Makefile.toml
server/benches/: pdf_parsing.rs
server/src/: error.rs  lib.rs  main.rs  models.rs
server/src/api/: mod.rs
server/src/parser/: mod.rs  reconstruct.rs
server/src/pdf_inference/: mod.rs  reconstruct.rs  table.rs
