[package]
name = "pdf-maldives-be"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.1", features = ["full"] }
axum = {  version = "0.8.9", features = ["multipart"] }
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0"
pdfium-render = "0.9.0"
tower-http = { version="0.6.8", features = ["cors"] }
rayon = "1.12.0"
image = "0.25"
base64 = "0.22"

[dev-dependencies]
criterion = { version="0.8.2", features = ["html_reports"]}

[[bench]]
name = "pdf_parsing"
harness = false
